--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assests/animations/data_not_found.json
+    - assests/animations/empty.json
+    - assests/animations/error.json
+    - assests/animations/loading.json
+    - assests/animations/small_error.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
